Fix cart overflow problem

--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -24,7 +24,6 @@
   color: black;
   z-index: 10;
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
-  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -62,8 +61,12 @@
 
 .shopping-bag-container {
   display: flex;
+  height: 75%;
+  width: 100%;
   flex-direction: column;
   row-gap: 1rem;
+  overflow-y: auto;
+  padding: 0.5rem;
 }
 
 .cart-item-container {
